feat: drop dev setup

--- a/ansible/roles/k3s/templates/metallb-helmchart.yml.j2
+++ b/ansible/roles/k3s/templates/metallb-helmchart.yml.j2
@@ -13,7 +13,7 @@ metadata:
 spec:
   repo: https://metallb.github.io/metallb
   chart: metallb
-  version: 0.13.11
+  version: {{ metallb_version }}
   targetNamespace: metallb-system
   valuesContent: |-
     prometheus:
