--- a/ansible/roles/k3s/templates/prometheus-crds-helmchart.yml.j2
+++ b/ansible/roles/k3s/templates/prometheus-crds-helmchart.yml.j2
@@ -8,4 +8,4 @@ metadata:
 spec:
   repo: https://prometheus-community.github.io/helm-charts
   chart: prometheus-operator-crds
-  version: 6.0.0
+  version: {{ prometheus_crd_version }}
